--- a/Views/Home/Collection1.cshtml
+++ b/Views/Home/Collection1.cshtml
@@ -150,7 +150,7 @@
                 <div class="d-grid gap-2 col-6 mx-auto">
                     <form method="post" aso-controller="Home" asp-action="Cart">
                         <input type="hidden" name="Id" value="@ViewBag.artistCollection.Id">
-                        <button class="btn bg-pink-orange text-white px-5 py-2  mx-2 rounded text-decoration-none font2"
+                        <button class="btn bg-pink-orange text-white  col-10 mx-auto  mx-2 rounded shadow-none font2"
                             type="submit">Add to Cart</button>
                         @* <a asp-controller="home" asp-action="Cart"
                             class="bg-pink-orange text-white px-5 py-2 mx-2 rounded text-decoration-none font2">
@@ -158,7 +158,7 @@
                             </a> *@
                     </form>
                     <a asp-controller="home" asp-action="Wishlist"
-                        class="bg-pink-orange  text-white px-5 py-2 mx-2 rounded text-decoration-none font2">
+                        class="bg-pink-orange  text-white py-2 mx-2 rounded text-decoration-none font2">
                         Add to Wishlist
                     </a>
                 </div>
