--- a/Views/Home/CustomArtRequest.cshtml
+++ b/Views/Home/CustomArtRequest.cshtml
@@ -145,20 +145,15 @@
                 <div class="col-lg-2 col-md-3 my-1">
                     <img src="~/img/painting4.jpg" style="height: 6rem; width: 6rem;" alt="">
                 </div>
-                <div class="col-lg-3 col-md-3  my-1">
+                <div class="col-lg-4 col-md-3  my-1">
                     <span class="font2 fs-6 d-block">From Dikshant Chopra</span>
                 </div> 
-                <div class="col-lg-3 col-md-3 my-1">
+                <div class="col-lg-5 col-md-5 my-1">
                     <label for="exampleFormControlTextarea1" class="form-label">
                         Customization details
                        </label>
-                       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                </div>
-                <div class="col-lg-3 col-md-2 my-1">
-                    <label for="exampleFormControlTextarea1" class="form-label">
-                      Reply
-                     </label>
-                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                         <textarea class="form-control shadow-none text-area" id="exampleFormControlTextarea1" rows="3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</textarea>
+                       @*<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>*@
                 </div>
             </div>
             <div class="row border border-1 my-3 shadow p-3 text-center">
@@ -168,14 +163,14 @@
                 <div class="col-lg-2 col-md-3 my-1">
                     <img src="~/img/sketch1.jpg" style="height: 6rem; width: 6rem;" alt="">
                 </div>
-                <div class="col-lg-3 col-md-3  my-1">
+                <div class="col-lg-4 col-md-3  my-1">
                     <span class="font2 fs-6 d-block">From Raghav Sharma</span>
                 </div> 
-                <div class="col-lg-3 col-md-3 my-1">
+                <div class="col-lg-5 col-md-5 my-1">
                     <label for="exampleFormControlTextarea1" class="form-label">
                         Customization details
                        </label>
-                       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</textarea>
+                       <textarea class="form-control shadow-none text-area" id="exampleFormControlTextarea1" rows="3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</textarea>
                 </div>
                @* <div class="col-lg-3 col-md-2 my-1">
                     <label for="exampleFormControlTextarea1" class="form-label">
@@ -184,6 +179,6 @@
                      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>*@
             </div>
-                      <a class="border-0 bg-rose float-end text-white btn-sm my-3 mx-2 px-5 py-2 font2 rounded text-decoration-none">Send</a>
+                   @*   <a class="border-0 bg-rose float-end text-white btn-sm my-3 mx-2 px-5 py-2 font2 rounded text-decoration-none">Send</a>*@
         </div>
     </section>
